--- a/board/src/main/resources/application.properties
+++ b/board/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=1234567
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+mybatis.type-handlers-package=com.myapp.config
